@@ -74,6 +74,9 @@ Release 0.9.0 - unreleased
 
   BUG FIXES
 
+    TAJO-905: When to_date() parses some date without day, the result will be 
+    wrong. (hyunsik)
+
     TAJO-891: Complex join conditions with UNION or inline should be supported.
     (hyunsik)
     
